--- a/WatchPlus/Properties/launchSettings.json
+++ b/WatchPlus/Properties/launchSettings.json
@@ -22,7 +22,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7195;http://localhost:5133",
+      "applicationUrl": "https://localhost:7195;http://localhost:5133;http://192.168.1.108:7700",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
