--- a/WatchPlus/appsettings.Development.json
+++ b/WatchPlus/appsettings.Development.json
@@ -6,5 +6,11 @@
     }
   },
 
-  "Connections": "ok"
+  "Connections": {
+    "MsSqlDb": {
+      "Server": "localhost",
+      "Database": "WatchPlusDB",
+      "TrustServerCertificate": "True"
+    }
+  }
 }
