--- a/WatchPlus/appsettings.Development.json
+++ b/WatchPlus/appsettings.Development.json
@@ -12,5 +12,13 @@
       "Database": "WatchPlusDB",
       "TrustServerCertificate": "True"
     }
+  },
+
+  "RepositoryChanger": {
+    "flag": "true"
+  },
+
+  "ConnectionStrings": {
+    "MsSqlDb": "Server=localhost;Database=FilmsDb;Trusted_Connection=True;"
   }
 }
