Add Logs using Dapper Sql

--- a/WatchPlus/appsettings.Development.json
+++ b/WatchPlus/appsettings.Development.json
@@ -18,7 +18,9 @@
     "flag": "true"
   },
 
-  "ConnectionStrings": {
-    "MsSqlDb": "Server=localhost;Database=FilmsDb;Trusted_Connection=True;"
+  
+
+  "LogSettings": {
+    "LogFlag": "true"
   }
 }
