Migrate All Entity to EF Core

--- a/WatchPlus/appsettings.Development.json
+++ b/WatchPlus/appsettings.Development.json
@@ -21,6 +21,10 @@
   
 
   "LogSettings": {
-    "LogFlag": "true"
+    "LogFlag": "false"
+  },
+
+  "ConnectionStrings": {
+    "MsSqlServer": "Server=localhost;Database=WatchPlusEfDB;Trusted_Connection=True;TrustServerCertificate=True"
   }
 }
